# prometheus

./: .gitignore  CMakeLists.txt  Makefile  TODO  makefile
gui/: .gitignore  Makefile  gui.cpp  gui.h  main.cpp
src/: bitboard.cpp  bitboard.h  engine.cpp  engine.h  eval.cpp  eval.h  main.cpp  movegen.cpp  movegen.h  perft.h  position.cpp  position.h  serialize.cpp  serialize.h  tt.cpp  tt.h  types.h  ui.cpp  ui.h  utils.cpp  utils.h
src/.ccls-cache/@@home@bulbus@dev@prometheus@src/: @snap@ccls@126@usr@lib@llvm-18@lib@clang@18@include@__stdarg___gnuc_va_list.h.blob  @snap@ccls@126@usr@lib@llvm-18@lib@clang@18@include@__stddef_max_align_t.h.blob  @snap@ccls@126@usr@lib@llvm-18@lib@clang@18@include@__stddef_null.h.blob  @snap@ccls@126@usr@lib@llvm-18@lib@clang@18@include@__stddef_nullptr_t.h.blob  @snap@ccls@126@usr@lib@llvm-18@lib@clang@18@include@__stddef_offsetof.h.blob  @snap@ccls@126@usr@lib@llvm-18@lib@clang@18@include@__stddef_ptrdiff_t.h.blob  @snap@ccls@126@usr@lib@llvm-18@lib@clang@18@include@__stddef_size_t.h.blob  @snap@ccls@126@usr@lib@llvm-18@lib@clang@18@include@__stddef_wchar_t.h.blob  @snap@ccls@126@usr@lib@llvm-18@lib@clang@18@include@stdarg.h.blob  @snap@ccls@126@usr@lib@llvm-18@lib@clang@18@include@stddef.h.blob  @snap@ccls@126@usr@lib@llvm-18@lib@clang@18@include@stdint.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@assert.h.blob  @usr@include@c++@11@algorithm.blob  @usr@include@c++@11@array.blob  @usr@include@c++@11@backward@binders.h.blob  @usr@include@c++@11@bits@algorithmfwd.h.blob  @usr@include@c++@11@bits@alloc_traits.h.blob  @usr@include@c++@11@bits@allocator.h.blob  @usr@include@c++@11@bits@basic_ios.h.blob  @usr@include@c++@11@bits@basic_ios.tcc.blob  @usr@include@c++@11@bits@basic_string.h.blob  @usr@include@c++@11@bits@basic_string.tcc.blob  @usr@include@c++@11@bits@char_traits.h.blob  @usr@include@c++@11@bits@charconv.h.blob  @usr@include@c++@11@bits@concept_check.h.blob  @usr@include@c++@11@bits@cpp_type_traits.h.blob  @usr@include@c++@11@bits@cxxabi_forced.h.blob  @usr@include@c++@11@bits@cxxabi_init_exception.h.blob  @usr@include@c++@11@bits@enable_special_members.h.blob  @usr@include@c++@11@bits@erase_if.h.blob  @usr@include@c++@11@bits@exception.h.blob  @usr@include@c++@11@bits@exception_ptr.h.blob  (+185 more)
tests/: perft.cpp
(+18 files in other folders)
